# cql_server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_meson.yml
lib/: common.hh
lib/cql/: cql_client_handler.hh  cql_message.hh  cql_message_builder.hh  cql_message_parser.hh  cql_option.hh  cql_parser.hh  cql_query.hh  cql_query_parser.hh  cql_query_processor.hh  cql_result.hh  cql_result_builder.hh  cql_serializer.hh  cql_server.hh
lib/util/: assert.hh  bytes.hh  errors.hh  factory.hh  logger.cc  logger.hh
scripts/: build.sh  grabber.sh  rebuild.sh
src/: main.cc
subprojects/: CMakeLists.txt
tests/: gtest_test.cc  logger_test.cc
